# opencv_learn

./: CMakeLists.txt  README.md
src/: 16_LoadShowOutputImage.cpp  17_CreateTrackbar.cpp  18_UseMouse.cpp  19_UseMat.cpp  20_DrawImage.cpp  21_UsePointerAccessPixel.cpp  25_ImageBlending.cpp  27_ChangeContrastAndBright.cpp  28_DFT.cpp  29_Write_XML_and_YAML_File.cpp  30_Read_XML_and_YAML_File.cpp  31_boxFilter.cpp  34_LinearImageFilter.cpp  37_ImageFiltering.cpp  40_dilate_And_erode.cpp  48_Morphology.cpp  49_floodFill.cpp  50_floodFill2.cpp  51_resize.cpp  52_pyrUp.cpp  54_PyrAndResize.cpp  55_threshold.cpp  56_canny.cpp  57_sobel.cpp  60_EdgeDetection.cpp  61_HoughLines.cpp  62_HoughLinesP.cpp  63_HoughCircles.cpp  65_remap.cpp  66_remap2.cpp  67_AffineTransform.cpp  68_equalizeHist.cpp  69_findContours.cpp  71_convexHull.cpp  72_convexHull2.cpp  76_ContourMoment.cpp  77_watershed.cpp  78_inpaint.cpp  79_H-S-Histogram.cpp  80_Histogram2.cpp  (+9 more)
